src/renderer/src/assets/main.css
body,
html {
  width: 100%;
  height: 100%;
  margin: 0px;
  background: rgb(6 10 19);
  font-family: sans-serif;
}

p {
  line-height: 1.6;
  margin: 0px;
}

button {
  border-radius: 8px;
  padding: 10px;
  border: none;
  background: #1e3563;
  color: #cddff5;
  cursor: pointer;
  display: flex;
  align-items: anchor-center;
  justify-content: center;
}

button svg {
  margin-right: 8px;
}

button:disabled {
  cursor: unset;
  color: grey;
  background-color: #14223e;

}

button:disabled span {
  margin-right: 8px;
}

button.icon {
  padding: 4px;
}

button.icon svg {
  margin: 0px;
}

#root {
  width: 100%;
  height: 100%;
  display: flex;
}

.sidebar {
  min-width: 200px;
  width: 200px;
  height: calc(100% - 20px);
  box-sizing: border-box;
  margin: 10px;
  background-color: rgb(14 24 44);
  border-radius: 6px;
  display: flex;
  flex-direction: column;
}

.sidebar .siteInfo {
  width: calc(100% - 24px);
  /* height: 100px; */
  padding: 12px;
  background-color: rgb(29, 48, 87);
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  margin: 10px;
  border-radius: 14px;
  cursor: pointer;
}

.sidebar .siteInfo .favicon-container {}

.sidebar .siteInfo .favicon-container .favicon {
  width: 30px;
  height: 30px;
  border-radius: 100%;
}

.sidebar .siteInfo .favicon-container .favicon.no-icon {
  background: grey;
}

.sidebar .siteInfo .info {
  font-size: 7px;
  /* padding-top: 5px; */
  padding-left: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
}

.sidebar .siteInfo .info h1 {
  font-size: 14px;
  color: #bcd6f6;
  font-family: sans-serif;
  font-weight: 500;
  padding: 0px;
  margin: 0px;
}

.sidebar .siteInfo .info button {
  padding: 5px;
  background: #143477
}

.sidebar .siteInfo .info button svg {
  margin-right: 0px;
}

.sidebar .siteInfo .info.select-button {
  padding-left: 0px;
  flex-grow: 1;
}

.sidebar .siteInfo .info.select-button h1 {
  width: 100%;
  text-align: center;
  color: #94aac4;
}

.sidebar .siteInfo .info h2 {
  font-size: 14px;
}

.mdxeditor-container {
  flex-grow: 1;
  margin: 10px;
  background: #0e182d;
  box-sizing: border-box;
  padding: 10px;
  border-radius: 6px;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  scrollbar-width: none;
}

.mdxeditor-container .title {
  background: none;
  border: none;
  margin: 5px;
  padding: 5px;
  font-size: 26px;
  color: white;
  font-weight: 800;
  -webkit-tap-highlight-color: none;
  outline: none;
}

.mdxeditor-container .mdxeditor {
  width: 99%;
  height: 100%;
}

.mdxeditor-container .metadata {
  border-radius: 8px;
  background-color: #2e3455;
  margin: 10px;
  margin-left: 0px;
  margin-right: 0px;
  border-collapse: collapse;
  color: #acc7ff;
  font-family: arial;
}

.mdxeditor-container .metadata .buttons {
  display: none;
}

.mdxeditor-container .toolbar {
  width: calc(100% - 10px);
  border-radius: 8px;
  background-color: #2e3455;
  margin: 10px;
  margin-left: 0px;
  margin-right: 0px;
  padding: 5px;
  border-collapse: collapse;
  color: #acc7ff;
  font-family: arial;
  position: sticky;
  top: 0px;
  left: 0;
  z-index: 100;
  margin-top: 0px;
}

.mdxeditor-container .toolbar button {
  justify-content: center;
  width: 26px;
  height: 26px;
  text-align: center;
  padding: 0px;
}

.mdxeditor-container .toolbar button svg {
  margin-right: 0px !important;
}

.back-button {
  align-self: anchor-center;
  margin-left: 6px;
  margin-right: 6px;
  cursor: pointer;
}

.add-button {
  margin-left: 6px;
  margin-right: 6px;
  cursor: pointer;
  align-self: anchor-center;
}

.mdxeditor-container tr {
  border-bottom: 1px solid #0e182d;
  /* background: red; */
  display: block;
  padding: 8px;
  display: flex;
  align-items: anchor-center;
}

.mdxeditor-container tr .buttons {
  margin-left: auto;
  display: none;
}

.mdxeditor-container tr .buttons button {
  width: 24px;
  height: 16px;
  padding: unset;
}

.mdxeditor-container tr .buttons button svg {
  margin-right: 0px;
}

.mdxeditor-container tr:hover .buttons {
  display: flex;
}

.mdxeditor-container tr:last-of-type {
  border: none;
}

.mdxeditor-container tr td:first-child {
  padding-right: 10px;
  color: #acc7ff;
}

.mdxeditor-container img {
  max-width: 60%;
}

.mdxeditor-container tr td {
  color: #e5eeff;
}

.mdxeditor-toolbar {
  background: color(display-p3 0.2 0.22 0.35) !important;
}

.sidebar ul {
  padding-inline-start: 0px;
  list-style-type: none;
  flex-grow: 1;
}

.sidebar ul li {
  height: fit-content;
  /* margin: 10px; */
  color: rgb(209, 217, 236);
  font-size: 14px;
  border-bottom: 1px solid #162748;
  font-weight: 100;

}

.sidebar ul li.parent {
  display: flex;
  align-items: anchor-center;
  font-size: 18px;
  font-weight: 400;
  border-bottom: none;
  padding: 18px;
}

.sidebar ul li .collectionLabel {
  color: #cddff5;
  padding-left: 0.7em;
}

.sidebar ul li span {
  display: inline-block;
  word-break: break-word;
  text-indent: 0em;
  padding-left: 2em;
}

.sidebar ul li {
  word-break: break-word;
  /* Ensures long words will wrap */
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 10px;
  font-family: Arial, Helvetica, sans-serif;
  cursor: pointer;
  color: #acc7ff;
}

.postsList {
  padding: 10px;
  height: 100%;
  padding-top: 0px;
  position: relative;
}

.postsList h1 {
  padding: 0px;
  margin: 0px;
  color: #e5eeff
}

.postsList ul,
.postsList li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.postsList ul li label {
  white-space: pre;
  text-overflow: ellipsis;
  max-width: 70%;
  overflow: hidden;
  cursor: pointer;
  font-size: 16px;
}

.postsList ul {
  margin-right: 10px;
  margin-top: 20px;
}

.postsList ul li {
  box-sizing: border-box;
  margin: 10px;
  margin-right: 24px;
  margin-left: 24px;
  /* width: 100%; */
  height: 50px;
  /* border: 1px solid #333a5f; */
  border-radius: 5px;
  font-size: 20px;
  color: #d7e3fd;
  display: flex;
  align-items: center;
  padding-left: 15px;
  padding-right: 15px;
  cursor: pointer;
  justify-content: space-between;
  transition: background ease-in 0.15s;
}

.postsList ul li .buttons-info {
  display: flex;
  justify-content: end;
  align-items: center;
}

.postsList ul li .buttons-info button {
  margin-left: 10px;
  display: none;
}

.postsList ul li:hover button {
  display: block;
  z-index: 100
}

.postsList .head-container {
  display: flex;
  justify-content: space-between;
}

.postsList .head-container button {
  height: 35px;
  width: 35px;
  border-radius: 100%;
}

.postsList ul li:hover {
  background: #2e3455;
}

.postsList ul li span {
  font-size: 14px;
  color: grey;
  justify-self: end;
  text-align: right;
  white-space: nowrap;
}

.dialog-modal-bg {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  width: 100%;
  height: 100%;
  backdrop-filter: blur(10px);
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 200;
}

.dialog-modal-bg .dialog {
  border-radius: 8px;
  background-color: rgb(19 41 86);
  color: white;
}

.dialog-modal-bg .dialog h1:first-of-type {
  font-size: 24px;
  border-bottom: 1px solid #143477;
  padding: 12px;
}

.dialog-modal-bg .dialog .content {
  padding: 12px;
}

.dialog-modal-bg .dialog .content p {
  margin-top: 0px;
}

.dialog-modal-bg .dialog .buttons {
  display: flex;
  margin-top: 14px;
}

.dialog-modal-bg .dialog .buttons button:not(:first-child) {
  margin-left: 12px;
}

.title-bar {
  display: flex;
  flex-direction: row;
}

.title-bar .title {
  flex-grow: 1;
}

.title-bar button {
  width: 35px;
  height: 35px;
  border-radius: 100%;
  align-self: center;
  cursor: pointer;
}

.tiptap {
  color: white;
  font-family: sans-serif;
  outline: none;
  cursor: horizontal-text;
}

.milkdown .ProseMirror {
  padding: 20px !important;
  background: #0e182d;
  color: #dee7f6;

}

.milkdown .ProseMirror a {
  color: #81a7f6 !important;
}

.milkdown .ProseMirror ul,
.milkdown .ProseMirror ol {
  padding: 0;
  margin-left: 36px;
  list-style-type: initial !important;
  list-style-type: disc !important;
}

.milkdown .ProseMirror ul li::marker,
.milkdown .ProseMirror ol li::marker {
  color: white;
}

.site-buttons {
  display: inline-grid;
  grid-template-columns: 1fr 1fr;
  margin: 10px;
  gap: 10px;
}

.containingList span.listHeader {
  margin-left: 14px;
  font-size: 14px;
  color: #acbdd2;
  font-weight: 500;
  font-family: Helvetica;
  display: flex;
  width: calc(100%-10px);
  line-height: 19px;
  justify-content: space-between;
  margin-right: 18px;
}

.containingList span.listHeader button {
  padding: 2px;
  margin: 0px;
  min-width: 19px;
  border-radius: 6px;
  width: 20px;
  height: 20px;
}

.containingList .parent button {
  padding: 5px;
  border-radius: 6px;
  display: none;
}

.containingList .parent:hover button {
  display: inherit;
}

.containingList .parent button svg {
  margin-right: 0px;
}

.siteSelector {
  background-color: rgb(14 24 44);
  border-radius: 6px;
  padding: 10px;
  display: flex;
  flex-direction: column;
}

.siteSelector .siteInfo {
  display: flex;
  align-items: center;
  padding: 14px;
  cursor: pointer;
  margin-bottom: 5px;
}

.siteSelector .siteInfo:hover {
  background: rgb(29, 48, 87);
  border-radius: 8px;
}

.siteSelector .siteInfo .favicon-container {
  width: 25px;
  height: 25px;
  margin-right: 8px;
}

.siteSelector .siteInfo .info {
  font-family: sans-serif;
  font-size: 16px;
  color: #bcd6f6;
}

.dashboardForm {
  margin-bottom: 15px;
  padding: 15px;
}

.dashboardForm span {
  display: flex;
  height: 30px;
  margin-bottom: 10px;
  margin-left: 11px;
  font-size: 15px;
  padding: 5px;
}

.dashboardForm span b {
  width: 100px;
  display: flex;
  align-items: center;
  color: #acc7ff;
  font-weight: 500;
}

.dashboardForm h2,
.dashboardForm h1 {
  color: #d7e3fd;
}

.dashboardForm h1 {
  margin: 0px;
  padding: 0px;
  margin-bottom: 18px;
}

.dashboardForm h2 {
  margin-bottom: 18px;
}

.milkdown::selection {
  color: #c4dfff !important;
  background: #2e3455;
}

.milkdown .ProseMirror code {
  border-radius: 4px;
  background: #1d2f57 !important;
  padding: 4px !important;
  font-size: 12px !important;

}

.milkdown .ProseMirror p {
  line-height: 1.6 !important;
  color: #bcd6f6 !important;
}

.wizard {
  display: flex;
  flex-direction: column;
  width: 500px;
  height: fit-content;
  border-radius: 6px;
  background-color: rgb(14 24 44);
  align-self: center;
  margin: 0px auto;
  color: #d7e3fd;
}

.wizard .progressStepper {
  display: flex;
  flex-direction: row;
  gap: 1px;
}

.wizard .progressStepper .step {
  flex-grow: 1;
  padding: 20px;
  padding-bottom: 10px;
  border-bottom: 2px solid #3a5273;
}

.wizard .progressStepper .step.active {
  border-bottom: 2px solid #5a7fb3;
  font-weight: bold;
}

.wizard .progressStepper .step label {
  color: #acc7ff;
  font-size: 12px;
}

.wizard .wizardContent {
  display: flex;
  gap: 20px;
  padding: 20px;
}

.wizard .wizardContent form{
  display:flex;
  flex-direction:column;
  gap:10px;
}

.wizard .wizardContent form label{
  display:flex;
  gap:30px;
  padding:10px;
  padding-left:0px;
  padding-right:0px;
}

.wizard .wizardContent form label b{
  width:100px;
  align-content: center;
}
.wizard .wizardContent form label input{
  height:38px;
}

.wizard .wizardContent form label:first-of-type{
  padding-top:0px;
}


.wizard .wizardActions {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 20px;
  padding-top: 0px;
}

.wizard .wizardActions button {
  min-width: 70px;
}

.wizard .wizardActions button:only-of-type{
  margin-left:auto;
}

